--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@degjs/simple-mask",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "description": "Simple masking plugin",
     "keywords": [
         "masking",
@@ -17,7 +17,7 @@
     },
     "bugs": "https://github.com/DEGJS/simpleMask/issues",
     "files": [
-        "src"
+        "src/simpleMask.js"
     ],
     "main": "src/simpleMask.js",
     "publishConfig": {
